fixed readme, added flicker, updated contact

--- a/css/main.scss
+++ b/css/main.scss
@@ -1,64 +1,165 @@
-
 body {
-    font-weight: 100;
-    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-    background-color: black;
-    color: white;
-    scroll-behavior: smooth;
-    span {
-            font-family: 'Courgette', sans-serif;
-            padding: 0.5em;
-            font-weight: bold;
-            color:rgb(86, 247, 247);
-    }
+	font-weight: 100;
+	font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+	background-color: black;
+	color: white;
+	scroll-behavior: smooth;
+	span {
+		font-family: 'Courgette', sans-serif;
+		font-size: 120%;
+		padding: 0.5em;
+		font-weight: bold;
+		color: rgb(220, 66, 39);
+
+	}
+}
+
+.container {
+	header {
+		width: 50%;
+	}
 }
 
 .hero-img {
-    background: url('../assets/latern1.jpg');
-    background-size: cover;
+	background: url('../assets/latern1.jpg');
+	background-size: cover;
 	background-position-x: 40%;
 	background-position-y: 40%;
 	width: 100%;
-    height: 60vh;
-    z-index: -1;
-    
+	height: 60vh;
+	z-index: -1;
+	opacity: 85%;
+	border-bottom-left-radius: 440px;
+	border-bottom-right-radius: 100px;
+	.welcome {
+		height: 350px;
+		display: flex;
+		align-items: center;
+		justify-content: center;
+		font-size: 400%;
+		font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+		font-weight: 400;
+		animation: textflicker 3s linear infinite;
+
+	}
 }
 
+@keyframes textflicker {
+	0% {
+	  opacity:0.1;
+	  text-shadow: 0px 0px 29px rgb(242, 198, 22);
+	}
+	
+	2% {
+	  opacity:1;
+	  text-shadow: 0px 0px 29px rgb(242, 198, 22);
+	}
+	8% {
+	  opacity:0.1;
+	  text-shadow: 0px 0px 29px rgb(242, 198, 22);
+	}
+	9% {
+	  opacity:1;
+	  text-shadow: 0px 0px 29px rgb(242, 198, 22);
+	}
+	12% {
+	  opacity:0.1;
+	  text-shadow: 0px 0px rgb(242, 198, 22);
+	}
+	20% {
+	  opacity:1;
+	  text-shadow: 0px 0px 29px rgb(242, 198, 22);
+	}
+	25% {
+	  opacity:0.3;
+	  text-shadow: 0px 0px 29px rgb(242, 198, 22);
+	}
+	30% {
+	  opacity:1;
+	  text-shadow: 0px 0px 29px rgb(242, 198, 22);
+	}
+	
+	70% {
+	  opacity:0.7;
+	  text-shadow: 0px 0px 29px rgb(242, 198, 22);
+	  
+	}
+	
+	72% {
+	  opacity:0.2;
+	  text-shadow:0px 0px 29px rgb(242, 198, 22);
+	  
+	}
+	
+	77% {
+	  opacity:.9;
+	  text-shadow: 0px 0px 29px rgb(251, 206, 26);
+	  color:yellow;
+	}
+	100% {
+	  opacity:.9;
+	  text-shadow: 0px 0px 29px rgb(242, 238, 22);
+	  color:yellow;
+	}
+  }
+
 svg {
-    padding: 20px;
-    fill: white;
-    position: fixed;
-    top: 0px;
-    right: 0px;
-    
+	padding: 20px;
+	fill: white;
+	position: fixed;
+	top: 0px;
+	right: 0px;
 }
 a {
-    text-decoration: none;
-    
+	text-decoration: none;
 }
-a:hover{
-    color:rgb(139, 214, 214)
+a:hover {
+	color: rgb(139, 214, 214);
 }
 a:visited {
-    color: rgb(216, 60, 216);
+	color: rgb(216, 60, 216);
 }
 
 nav {
-    ul {
-        list-style-type: none;
-        padding: 0;
-    }
+	ul {
+		list-style-type: none;
+		padding: 0;
+	}
 }
 .aboutme {
-    h2 {
-        font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-    }
-    p {
-        font-weight: 100px;
-    }
-    span {
-        color: green;
-    }
+	h2 {
+		font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+	}
+	p {
+		font-weight: 100px;
+	}
+	span {
+		color: green;
+	}
 }
+.contact {
+	display: grid;
+	position: sticky;
 
-
+	.email-address, .phone-number, .message {
+		input {
+			margin: 20px 0px 20px 0px;
+			padding: 10px;
+			display: flex;
+			border: none;
+			border-color: none;
+			height: 2rem;
+			font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+		}
+	}
+}
+.contact-img {
+	background: url('../assets/dragon1.png');
+	background-position-x: 80%;
+	background-position-y: 80%;
+	background-size: auto;
+	width: 1000px;
+	height: 1000px;
+	filter: invert(100%);
+	position: fixed;
+}
